--- a/src/components/OrigamiButton/index.module.css
+++ b/src/components/OrigamiButton/index.module.css
@@ -1,13 +1,3 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.smallButtonContainer {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  margin-bottom: 50px;
 }
